@@ -86,8 +86,8 @@
 			<div class="results-teaser">
 				<div class="relevance">
 					<div class="relevance-label">###LLL:relevance###: </div>
-					<div class="relevance-bar">###RELEVANCE_BAR:###RESULT_DOCUMENT.SCORE######</div>
-					<div class="relevance-percent">###RELEVANCE:###RESULT_DOCUMENT.SCORE######%</div>
+					<div class="relevance-bar">###RELEVANCE_BAR:###RESULT_DOCUMENT######</div>
+					<div class="relevance-percent">###RELEVANCE:###RESULT_DOCUMENT######%</div>
 				</div>
 
 				<p class="result-content">###RESULT_DOCUMENT.CONTENT###</p>
