@@ -1,5 +1,7 @@
 2012-08-21  Ingo Renner  <ingo.renner@dkd.de>
 
+	! [TEMPLATE] Changed the relevance view helpers to take the whole result document as argument (instead of just the score)
+
 	* Refactoring: Extracted several search components to separate classes
 
 	* Added class tx_solr_Typo3Environment
